Parameter sweep integration for sleep code

--- a/sleep-transition-model-workflow.ipynb
+++ b/sleep-transition-model-workflow.ipynb
@@ -49,6 +49,202 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "using legacy validation callback\n",
+      "/usr/local/lib/python3.12/site-packages/paramiko/pkey.py:100: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
+      "  \"cipher\": algorithms.TripleDES,\n",
+      "/usr/local/lib/python3.12/site-packages/paramiko/transport.py:259: CryptographyDeprecationWarning: TripleDES has been moved to cryptography.hazmat.decrepit.ciphers.algorithms.TripleDES and will be removed from this module in 48.0.0.\n",
+      "  \"class\": algorithms.TripleDES,\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cybershuttle_tune.sdk import ExecutionContext\n",
+    "from cybershuttle_tune.sdk import ApplicationContext\n",
+    "from cybershuttle_tune.sdk import TuneConfig\n",
+    "from cybershuttle_tune.sdk import DiscreteParam\n",
+    "from cybershuttle_tune.sdk import run_grid_search\n",
+    "from cybershuttle_tune.sdk import get_sweep_status\n",
+    "from cybershuttle_tune.sdk import fetch_outputs\n",
+    "from cybershuttle_tune.sdk import authorize\n",
+    "from cybershuttle_tune.cli.auth import get_access_token\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import json\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = [\n",
+    "    DiscreteParam('ha_awake', [0.3, 0.4]),\n",
+    "    DiscreteParam('ach_cx_awake', [0.3, 0.4]),\n",
+    "    DiscreteParam('ach_th_awake', [0.3, 0.4]),\n",
+    "]\n",
+    "\n",
+    "execution_context = ExecutionContext(resource = \"Expanse\", \n",
+    "                                     project = \"Default Project\", \n",
+    "                                     group_resource_profile = \"Default\", \n",
+    "                                     cpu = 1, \n",
+    "                                     memory = 1000, \n",
+    "                                     queue = \"shared\")\n",
+    "\n",
+    "input_file_mapping = {\"Network Config File\":\"network.cfg\", \"Param File\": \"params.txt\"}\n",
+    "app_context = ApplicationContext(app_name = \"Sleep-Stage-Transition\", input_dir = \"inputs\", input_file_mapping = input_file_mapping)\n",
+    "\n",
+    "tune_config = TuneConfig(\n",
+    "    app_context = app_context,\n",
+    "    params = params, \n",
+    "    execution_context = execution_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Network Config File': 'airavata-dp://d334e98f-3525-47db-8498-e214dcf35333', 'Param File': 'airavata-dp://8d6da63f-07a6-456e-be35-40abae5c9787'}\n",
+      "Airavata experiment sGYp9s_4_293c5b56-1f62-4198-ad01-97d0bfd7ae97 was launched for sweep config 4\n",
+      "{'Network Config File': 'airavata-dp://74bae416-20ee-4272-971a-381fff477c11', 'Param File': 'airavata-dp://5a3d4b05-0541-478e-84d3-f9928239b84d'}\n",
+      "Airavata experiment sGYp9s_1_9141fbdd-c2ca-401d-813e-2bcae547a60e was launched for sweep config 1\n",
+      "{'Network Config File': 'airavata-dp://af7608f6-7303-4c8b-8760-7dd224113720', 'Param File': 'airavata-dp://cff1836b-70e3-447e-b4da-aae7ddc2458b'}\n",
+      "Airavata experiment sGYp9s_7_dec34b7b-1f68-4d10-a33a-e9be61612805 was launched for sweep config 7\n",
+      "{'Network Config File': 'airavata-dp://2f99b33f-0fa0-4f0f-b79b-9ddca3474531', 'Param File': 'airavata-dp://7abde818-37a9-4014-862d-16bc174cc1d0'}\n",
+      "Airavata experiment sGYp9s_5_64aff500-a560-465b-ab7b-9aa876246b0b was launched for sweep config 5\n",
+      "{'Network Config File': 'airavata-dp://9d062b6b-f071-4cfd-903d-d0b37ddf812c', 'Param File': 'airavata-dp://3f1e4419-064e-47bb-8050-948c95f22f0e'}\n",
+      "Airavata experiment sGYp9s_0_51f8bf71-9ec8-460e-9790-0defe331f81d was launched for sweep config 0\n",
+      "{'Network Config File': 'airavata-dp://96582f59-6aca-4f6b-abc4-0a427b45d09e', 'Param File': 'airavata-dp://4e2a964b-fb37-40a5-8b65-cd22dcb40e2f'}\n",
+      "Airavata experiment sGYp9s_2_b63b057a-9451-499a-971a-ee736f4bd62d was launched for sweep config 2\n",
+      "{'Network Config File': 'airavata-dp://175bf18f-33c5-4b0d-b373-5da556e031c1', 'Param File': 'airavata-dp://d1dc757d-9749-4f3f-b72a-8861ee92aa78'}\n",
+      "Airavata experiment sGYp9s_6_62e52fe4-19cd-4547-a28f-688bede3c98a was launched for sweep config 6\n",
+      "{'Network Config File': 'airavata-dp://13f5e120-053b-40e1-aaf5-f8ced6fdd416', 'Param File': 'airavata-dp://e1505d71-33aa-490a-9324-3c6fedbd0be5'}\n",
+      "Airavata experiment sGYp9s_3_ba978461-987f-4df0-b226-1de87dea008d was launched for sweep config 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = run_grid_search(tune_config = tune_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.12/site-packages/thrift/transport/TSSLSocket.py:53: DeprecationWarning: ssl.PROTOCOL_TLS is deprecated\n",
+      "  self._context = ssl.SSLContext(ssl_version)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[['sGYp9s_4_293c5b56-1f62-4198-ad01-97d0bfd7ae97', 'COMPLETED'],\n",
+       " ['sGYp9s_1_9141fbdd-c2ca-401d-813e-2bcae547a60e', 'COMPLETED'],\n",
+       " ['sGYp9s_7_dec34b7b-1f68-4d10-a33a-e9be61612805', 'COMPLETED'],\n",
+       " ['sGYp9s_5_64aff500-a560-465b-ab7b-9aa876246b0b', 'COMPLETED'],\n",
+       " ['sGYp9s_0_51f8bf71-9ec8-460e-9790-0defe331f81d', 'COMPLETED'],\n",
+       " ['sGYp9s_2_b63b057a-9451-499a-971a-ee736f4bd62d', 'COMPLETED'],\n",
+       " ['sGYp9s_6_62e52fe4-19cd-4547-a28f-688bede3c98a', 'COMPLETED'],\n",
+       " ['sGYp9s_3_ba978461-987f-4df0-b226-1de87dea008d', 'COMPLETED']]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "states, indexes = get_sweep_status(response['job_name'], response['working_dir'])\n",
+    "states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.12/site-packages/thrift/transport/TSSLSocket.py:53: DeprecationWarning: ssl.PROTOCOL_TLS is deprecated\n",
+      "  self._context = ssl.SSLContext(ssl_version)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading experiment sGYp9s_4_293c5b56-1f62-4198-ad01-97d0bfd7ae97 for job index 4\n",
+      "Result 200: OK\n",
+      "Downloading experiment sGYp9s_1_9141fbdd-c2ca-401d-813e-2bcae547a60e for job index 1\n",
+      "Result 200: OK\n",
+      "Downloading experiment sGYp9s_7_dec34b7b-1f68-4d10-a33a-e9be61612805 for job index 7\n",
+      "Result 200: OK\n",
+      "Downloading experiment sGYp9s_5_64aff500-a560-465b-ab7b-9aa876246b0b for job index 5\n",
+      "Result 200: OK\n",
+      "Downloading experiment sGYp9s_0_51f8bf71-9ec8-460e-9790-0defe331f81d for job index 0\n",
+      "Result 200: OK\n",
+      "Downloading experiment sGYp9s_2_b63b057a-9451-499a-971a-ee736f4bd62d for job index 2\n",
+      "Result 200: OK\n",
+      "Downloading experiment sGYp9s_6_62e52fe4-19cd-4547-a28f-688bede3c98a for job index 6\n",
+      "Result 200: OK\n",
+      "Downloading experiment sGYp9s_3_ba978461-987f-4df0-b226-1de87dea008d for job index 3\n",
+      "Result 200: OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_paths = fetch_outputs(response['job_name'], response['working_dir'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['workdir/sGYp9s/4/outputs',\n",
+       " 'workdir/sGYp9s/1/outputs',\n",
+       " 'workdir/sGYp9s/7/outputs',\n",
+       " 'workdir/sGYp9s/5/outputs',\n",
+       " 'workdir/sGYp9s/0/outputs',\n",
+       " 'workdir/sGYp9s/2/outputs',\n",
+       " 'workdir/sGYp9s/6/outputs',\n",
+       " 'workdir/sGYp9s/3/outputs']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_paths"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -381,12 +577,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
