adding single plot paths

--- a/sleep-transition-model-workflow.ipynb
+++ b/sleep-transition-model-workflow.ipynb
@@ -74,9 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Paramaterizing histamine (HA) and acetylcholine (ACh)\n",
-    "\n",
-    "We will run simulations on level of histamine (HA) during the awake state in the thalamocortical network model, level of acetylcholine (ACh) in the cortical neurons (cx) and thalamic neurons (th) during the awake state."
+    "### Execute a single simulation on Remote HPC Resource"
    ]
   },
   {
@@ -335,8 +333,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load all the relevant results \n",
-    "cx,tc,re = gen_cx_tc_re_imageplot('sample-data/sleep-data/')"
+    "print(output_paths[0])\n",
+    "for outputfile in output_paths:\n",
+    "    out_tar_dir = outputfile + \"/\" + response['job_name'] + '_' + outputfile.split('/')[-2]\n",
+    "    out_tar_file_path = out_tar_dir + '/' + 'output.tar.gz'\n",
+    "    print(out_tar_dir)\n",
+    "    print(out_tar_file_path)\n",
+    "\n",
+    "import tarfile\n",
+    "out_tar_file = tarfile.open(out_tar_file_path) \n",
+    "out_tar_file.extractall(out_tar_dir) \n",
+    "out_tar_file.close()\n",
+    "output_dir = out_tar_dir + '/' + 'output/'\n",
+    "\n",
+    "cx,tc,re = gen_cx_tc_re_imageplot(output_dir)"
    ]
   },
   {
@@ -347,10 +357,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "seltime=np.arange(10000,15000)\n",
     "\n",
@@ -375,10 +383,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "flo = 1\n",
     "fhi = 100\n",
@@ -404,6 +410,46 @@
     "plt.colorbar()\n",
     "#plt.clim((0,250))\n",
     "plt.xlim([10000, 360000])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scale up Simulations\n",
+    "\n",
+    "## Paramaterizing histamine (HA) and acetylcholine (ACh)\n",
+    "\n",
+    "We will run simulations on level of histamine (HA) during the awake state in the thalamocortical network model, level of acetylcholine (ACh) in the cortical neurons (cx) and thalamic neurons (th) during the awake state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = [\n",
+    "    DiscreteParam('ha_awake', [0.6]),\n",
+    "    DiscreteParam('ach_cx_awake', [0.6]),\n",
+    "    DiscreteParam('ach_th_awake', [0.6]),\n",
+    "]\n",
+    "\n",
+    "# Run the simulation on the ACCESS-CI, San Diego Supercomputer Centers Expanse Cluster\n",
+    "execution_context = ExecutionContext(resource = \"Expanse\", \n",
+    "                                     project = \"Default Project\", \n",
+    "                                     group_resource_profile = \"Default\", \n",
+    "                                     cpu = 1, \n",
+    "                                     memory = 1000, \n",
+    "                                     queue = \"shared\")\n",
+    "\n",
+    "input_file_mapping = {\"Network Config File\":\"network.cfg\", \"Param File\": \"params.txt\"}\n",
+    "app_context = ApplicationContext(app_name = \"Sleep-Stage-Transition\", input_dir = \"inputs\", input_file_mapping = input_file_mapping)\n",
+    "\n",
+    "tune_config = TuneConfig(\n",
+    "    app_context = app_context,\n",
+    "    params = params, \n",
+    "    execution_context = execution_context)"
    ]
   },
   {
