--- a/sleep-transition-model-workflow.ipynb
+++ b/sleep-transition-model-workflow.ipynb
@@ -71,6 +71,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Review Input Parameters\n",
+    "! cat inputs/params.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -83,6 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Configure input parameters \n",
     "params = [\n",
     "    DiscreteParam('ha_awake', [0.6]),\n",
     "    DiscreteParam('ach_cx_awake', [0.6]),\n",
@@ -429,8 +440,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Launch 10 simulations with paramaterization of histamine from 0.3 to 1.2\n",
+    "\n",
     "params = [\n",
-    "    DiscreteParam('ha_awake', [0.6]),\n",
+    "    DiscreteParam('ha_awake', [0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2]),\n",
     "    DiscreteParam('ach_cx_awake', [0.6]),\n",
     "    DiscreteParam('ach_th_awake', [0.6]),\n",
     "]\n",
@@ -450,6 +463,45 @@
     "    app_context = app_context,\n",
     "    params = params, \n",
     "    execution_context = execution_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Launch the paramater sweep runs on remote HPC Resourcs\n",
+    "response = run_grid_search(tune_config = tune_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Query Cybeshuttle Server to fetch the job status. Wait until all statuses are complete\n",
+    "states, indexes = get_sweep_status(response['job_name'], response['working_dir'])\n",
+    "states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remote_output_paths = get_remote_data_dirs(response['job_name'], response['working_dir'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remote_output_paths"
    ]
   },
   {
