--- a/sleep-transition-model-workflow.ipynb
+++ b/sleep-transition-model-workflow.ipynb
@@ -63,6 +63,7 @@
     "from cybershuttle_tune.sdk import run_grid_search\n",
     "from cybershuttle_tune.sdk import get_sweep_status\n",
     "from cybershuttle_tune.sdk import fetch_outputs\n",
+    "from cybershuttle_tune.sdk import get_remote_data_dirs\n",
     "from cybershuttle_tune.sdk import authorize\n",
     "from cybershuttle_tune.cli.auth import get_access_token\n",
     "import os\n",
@@ -568,7 +569,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%status_remote"
+    "%%run_remote\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pylab as plt\n",
+    "from scipy import signal "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%run_remote\n",
+    "\n",
+    "def load_cx_tc_re_imageplot(spath):\n",
+    "    cx = np.loadtxt(spath + 'time_cx')\n",
+    "    tc = np.loadtxt(spath + 'time_tc')\n",
+    "    re = np.loadtxt(spath + 'time_re')\n",
+    "    return cx,tc,re\n",
+    "\n",
+    "\n",
+    "def plot_cx_tc_re(plt, data, datatc, datare):\n",
+    "    fig, ax = plt.subplots(facecolor='w',figsize=(12, 18))\n",
+    "\n",
+    "    plt.subplot2grid((5,1),(0,0),rowspan=3)\n",
+    "    plt.imshow(np.transpose(data[:,:]),extent=[0,data.shape[0],0,data.shape[1]], aspect='auto', cmap=parula_map, interpolation='bicubic')\n",
+    "    plt.clim(-65,-62)\n",
+    "    plt.title('Cortical Neurons')\n",
+    "\n",
+    "    plt.subplot2grid((5,1),(3,0))\n",
+    "    plt.imshow(np.transpose(datatc),extent=[0,datatc.shape[0],0,datatc.shape[1]], aspect='auto', cmap=parula_map, interpolation='bicubic')\n",
+    "    plt.clim(-68,-55)\n",
+    "    plt.title('Thalamic TC Neurons')\n",
+    "\n",
+    "    plt.subplot2grid((5,1),(4,0))\n",
+    "    plt.imshow(np.transpose(datare),extent=[0,datare.shape[0],0,datare.shape[1]], aspect='auto', cmap=parula_map, interpolation='bicubic')\n",
+    "    plt.clim(-68,-50)\n",
+    "    plt.title('Thalamic RE Neurons')\n",
+    "    plt.xlabel('Time (msec)')\n",
+    "    plt.ylabel('Neuron #')\n",
+    "\n",
+    "from matplotlib.colors import LinearSegmentedColormap\n",
+    "\n",
+    "cm_data = [[0.2081, 0.1663, 0.5292], [0.2116238095, 0.1897809524, 0.5776761905], \n",
+    " [0.212252381, 0.2137714286, 0.6269714286], [0.2081, 0.2386, 0.6770857143], \n",
+    " [0.1959047619, 0.2644571429, 0.7279], [0.1707285714, 0.2919380952, \n",
+    "  0.779247619], [0.1252714286, 0.3242428571, 0.8302714286], \n",
+    " [0.0591333333, 0.3598333333, 0.8683333333], [0.0116952381, 0.3875095238, \n",
+    "  0.8819571429], [0.0059571429, 0.4086142857, 0.8828428571], \n",
+    " [0.0165142857, 0.4266, 0.8786333333], [0.032852381, 0.4430428571, \n",
+    "  0.8719571429], [0.0498142857, 0.4585714286, 0.8640571429], \n",
+    " [0.0629333333, 0.4736904762, 0.8554380952], [0.0722666667, 0.4886666667, \n",
+    "  0.8467], [0.0779428571, 0.5039857143, 0.8383714286], \n",
+    " [0.079347619, 0.5200238095, 0.8311809524], [0.0749428571, 0.5375428571, \n",
+    "  0.8262714286], [0.0640571429, 0.5569857143, 0.8239571429], \n",
+    " [0.0487714286, 0.5772238095, 0.8228285714], [0.0343428571, 0.5965809524, \n",
+    "  0.819852381], [0.0265, 0.6137, 0.8135], [0.0238904762, 0.6286619048, \n",
+    "  0.8037619048], [0.0230904762, 0.6417857143, 0.7912666667], \n",
+    " [0.0227714286, 0.6534857143, 0.7767571429], [0.0266619048, 0.6641952381, \n",
+    "  0.7607190476], [0.0383714286, 0.6742714286, 0.743552381], \n",
+    " [0.0589714286, 0.6837571429, 0.7253857143], \n",
+    " [0.0843, 0.6928333333, 0.7061666667], [0.1132952381, 0.7015, 0.6858571429], \n",
+    " [0.1452714286, 0.7097571429, 0.6646285714], [0.1801333333, 0.7176571429, \n",
+    "  0.6424333333], [0.2178285714, 0.7250428571, 0.6192619048], \n",
+    " [0.2586428571, 0.7317142857, 0.5954285714], [0.3021714286, 0.7376047619, \n",
+    "  0.5711857143], [0.3481666667, 0.7424333333, 0.5472666667], \n",
+    " [0.3952571429, 0.7459, 0.5244428571], [0.4420095238, 0.7480809524, \n",
+    "  0.5033142857], [0.4871238095, 0.7490619048, 0.4839761905], \n",
+    " [0.5300285714, 0.7491142857, 0.4661142857], [0.5708571429, 0.7485190476, \n",
+    "  0.4493904762], [0.609852381, 0.7473142857, 0.4336857143], \n",
+    " [0.6473, 0.7456, 0.4188], [0.6834190476, 0.7434761905, 0.4044333333], \n",
+    " [0.7184095238, 0.7411333333, 0.3904761905], \n",
+    " [0.7524857143, 0.7384, 0.3768142857], [0.7858428571, 0.7355666667, \n",
+    "  0.3632714286], [0.8185047619, 0.7327333333, 0.3497904762], \n",
+    " [0.8506571429, 0.7299, 0.3360285714], [0.8824333333, 0.7274333333, 0.3217], \n",
+    " [0.9139333333, 0.7257857143, 0.3062761905], [0.9449571429, 0.7261142857, \n",
+    "  0.2886428571], [0.9738952381, 0.7313952381, 0.266647619], \n",
+    " [0.9937714286, 0.7454571429, 0.240347619], [0.9990428571, 0.7653142857, \n",
+    "  0.2164142857], [0.9955333333, 0.7860571429, 0.196652381], \n",
+    " [0.988, 0.8066, 0.1793666667], [0.9788571429, 0.8271428571, 0.1633142857], \n",
+    " [0.9697, 0.8481380952, 0.147452381], [0.9625857143, 0.8705142857, 0.1309], \n",
+    " [0.9588714286, 0.8949, 0.1132428571], [0.9598238095, 0.9218333333, \n",
+    "  0.0948380952], [0.9661, 0.9514428571, 0.0755333333], \n",
+    " [0.9763, 0.9831, 0.0538]]\n",
+    "\n",
+    "parula_map = LinearSegmentedColormap.from_list('parula', cm_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def butter_bandpass(lowcut, highcut, fs, order=5):\n",
+    "    nyq = 0.5 * fs\n",
+    "    low = lowcut / nyq\n",
+    "    high = highcut / nyq\n",
+    "    b, a = signal.butter(order, [low, high], btype='band')\n",
+    "    return b, a\n",
+    "\n",
+    "def butter_bandpass_filter(data, lowcut, highcut, fs, order=5):\n",
+    "    b, a = butter_bandpass(lowcut, highcut, fs, order=order)\n",
+    "    y = signal.lfilter(b, a, data)\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%run_remote\n",
+    "\n",
+    "def ffts(data, fs, nfft, h_freq ):\n",
+    "    # Usage : fft_corrected(data, fs, win, pad )\n",
+    "    #         data  --- np array\n",
+    "    #         fs  --- sampling rate\n",
+    "    #         nfft  --- padding -- int\n",
+    "    # need to load numpy as np\n",
+    "\n",
+    "    # if win.shape[0]>0:\n",
+    "    #     data=np.multiply(data,win)\n",
+    "\n",
+    "    #pad = data.shape[0]\n",
+    "    fft_out=np.fft.fft(data,n=nfft)\n",
+    "\n",
+    "    # frequency=np.multiply(np.arange(0,pad/2),fs/pad) \n",
+    "    frequency=np.linspace(0.0, 1.0/(2.0/fs), int(nfft/2))\n",
+    "    # frequency=np.fft.fftfreq(data.shape[-1])\n",
+    "\n",
+    "    power=np.absolute(fft_out)\n",
+    "    phase=np.angle(fft_out);\n",
+    "\n",
+    "    h_freq_bin = np.where(frequency<h_freq)    \n",
+    "    power=power[h_freq_bin]/np.shape(data)[0];\n",
+    "    phase=phase[h_freq_bin];\n",
+    "    frequency=frequency[h_freq_bin];\n",
+    "\n",
+    "    return power, phase, frequency"
    ]
   },
   {
