--- a/sleep-transition-model-workflow.ipynb
+++ b/sleep-transition-model-workflow.ipynb
@@ -664,6 +664,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%run_remote\n",
+    "\n",
     "def butter_bandpass(lowcut, highcut, fs, order=5):\n",
     "    nyq = 0.5 * fs\n",
     "    low = lowcut / nyq\n",
@@ -711,6 +713,97 @@
     "    frequency=frequency[h_freq_bin];\n",
     "\n",
     "    return power, phase, frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%run_remote\n",
+    "\n",
+    "seltime=np.arange(2000,6000)\n",
+    "plt.figure(figsize=(12,8))\n",
+    "\n",
+    "plt.subplot(2, 1, 1)\n",
+    "avg=signal.detrend(np.mean(cx[seltime,1:-1],axis=1))\n",
+    "#plt.plot(avg)\n",
+    "plt.plot(butter_bandpass_filter(avg,1,50,1000))\n",
+    "plt.title('Average / LFP')\n",
+    "\n",
+    "plt.subplot(2, 1, 2)\n",
+    "power, phase, frequency = ffts(avg, 1000, 4096, 100 )\n",
+    "plt.plot(frequency,(power))\n",
+    "plt.xlabel('Frequency')\n",
+    "plt.ylabel('Power')\n",
+    "plt.title('FFT of average')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%run_remote\n",
+    "\n",
+    "all_power = []\n",
+    "stim_lfp = []\n",
+    "for iter in remote_output_paths:\n",
+    "  #cx,tc,re = gen_cx_tc_re_imageplot(')\n",
+    "  seltime=np.arange(1000,6000)\n",
+    "  cx = np.loadtxt(iter + '/output/time_cx')\n",
+    "  avg=signal.detrend(np.mean(cx[seltime,1:-1],axis=1))\n",
+    "  power, phase, frequency = ffts(avg, 1000, 4096, 50 )\n",
+    "  all_power.append(power)\n",
+    "    \n",
+    "  seltime=np.arange(5000,7000)\n",
+    "  avg=signal.detrend(np.mean(cx[seltime,201:400],axis=1))  \n",
+    "  stim_lfp.append(avg) \n",
+    "\n",
+    "all_power=np.array(all_power)\n",
+    "stim_lfp=np.array(stim_lfp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%run_remote\n",
+    "\n",
+    "plt.figure(figsize=(22,8))\n",
+    "\n",
+    "for pl in range(10):\n",
+    "  plt.subplot(2,5,pl+1)\n",
+    "  plt.title('Sleep like state level: ' + str(pl))\n",
+    "  plt.plot(frequency,all_power[pl,:])\n",
+    "  plt.ylim([0,0.075])\n",
+    "  plt.xlim([0,40])\n",
+    "\n",
+    "plt.xlabel('Frequency (Hz)')\n",
+    "plt.xlabel('Power')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(22,8))\n",
+    "\n",
+    "for pl in range(10):\n",
+    "  plt.subplot(2,5,pl+1)\n",
+    "  plt.title('Sleep like state level: ' + str(pl))\n",
+    "  plt.plot(butter_bandpass_filter(stim_lfp[pl,:],1,50,1000))\n",
+    "  plt.ylim([-10,15])\n",
+    "  plt.xlim([700,1500])\n",
+    "\n",
+    "plt.xlabel('Time (msec)')\n",
+    "plt.xlabel('Amplitude (mV)')"
    ]
   },
   {
