adding torch import

--- a/DEM_Bending_with_optimized_params.ipynb
+++ b/DEM_Bending_with_optimized_params.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! pip install torch\n",
+    "\n",
     "from Sub_Functions.MultiLayerNet import *\n",
     "from Sub_Functions.InternalEnergy import *\n",
     "from Sub_Functions.IntegrationFext import *\n",
