fixing output path

--- a/sleep-transition-model-workflow.ipynb
+++ b/sleep-transition-model-workflow.ipynb
@@ -723,6 +723,22 @@
    "source": [
     "%%run_remote\n",
     "\n",
+    "sample_sweep_output = remote_output_paths[0] + 'output/'\n",
+    "# Plot activity across cell types \n",
+    "cx,tc,re = load_cx_tc_re_imageplot(sample_sweep_output)\n",
+    "plot_cx_tc_re(plt, cx, tc, re)\n",
+    "\n",
+    "#Note a stimuli applied at 6000msec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%run_remote\n",
+    "\n",
     "seltime=np.arange(2000,6000)\n",
     "plt.figure(figsize=(12,8))\n",
     "\n",
