--- a/cerebrum/v1l4-notebook.ipynb
+++ b/cerebrum/v1l4-notebook.ipynb
@@ -310,7 +310,7 @@
     "with open(\"/tmp/v1l4/description/custom_mod.json\") as ifx:\n",
     "    custom_mod_dict = json.load(ifx)\n",
     "\n",
-    "# print(json.dumps(custom_mod_dict, indent=2)) don't try to print, this will crash because of the size of the json"
+    "# print(json.dumps(custom_mod_dict, indent=2))"
    ]
   },
   {
